--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/mulish": "^5.2.5",
     "@fontsource/poppins": "^5.2.5",
     "@fontsource/rubik": "^5.2.5",
+    "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "lucide-react": "^0.479.0",
